--- a/BongMade.html
+++ b/BongMade.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Bong Made</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="stylesheet" type="text/css" href="BongmadeStyle.css">
     </head>
     <body>
         <nav class="nav sticky">
