--- a/shopping.html
+++ b/shopping.html
@@ -9,13 +9,22 @@
         text-align: center;
       }
       li {
-        margin-bottom: 10px;
+        background-color: rgb(136, 215, 218);
+        padding: 10px;
+        margin: 10px;
+        list-style: none;
       }
 
       li button {
-        font-size: 8px;
+        font-size: 10px;
         margin-left: 20px;
-        color: #666;
+        color: red;
+      }
+
+      .user {
+        background-color: rgb(204, 203, 203);
+        padding: 10px;
+        margin: 20px;
       }
     </style>
   </head>
@@ -29,10 +38,42 @@
     </div>
 
     <ul>
-
     </ul>
 
+    <div id="fetch">
+    </div>
+    
+
     <script>
+      function fetchData() {
+      fetch('https://jsonplaceholder.typicode.com/users' /*, {
+        method: 'POST',
+        headers: {
+          'Content-Type' : 'application/json'
+        },
+        body: JSON.stringify({
+          name: 'Rakesh Rakshit' 
+        })}*/
+      )
+      .then(response =>{ return response.json()})
+      .then(data => {
+        console.log(data);
+        const fetchUser = data.map(user => {
+          return `
+          <div class = 'user'>
+          <p>Name: ${user.name}</p>
+          <p>Email: ${user.email}</p>
+          </div>
+          `
+        }).join('');
+
+        document.getElementById('fetch').innerHTML = fetchUser;
+      });
+      }
+
+      fetchData();
+
+      
       const list = document.querySelector('ul');
       const input = document.querySelector('input');
       const button = document.querySelector('button');
@@ -56,6 +97,7 @@
         }
 
         input.focus();
+
       }
     </script>
   </body>
